// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#SN.01 Login screen renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "flex": 1,
        "marginTop": 20,
      },
      Object {
        "flex": 1,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Image
        blurRadius={0.9}
        source={1}
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <RCTScrollView>
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f5f5f5",
                "borderColor": "#B5A197",
                "borderWidth": 10,
                "elevation": 20,
                "height": 550,
                "justifyContent": "center",
                "margin": 20,
                "marginTop": "25%",
                "padding": 10,
                "shadowColor": "#000",
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "fontFamily": "Roboto",
                    "fontSize": 25,
                  }
                }
              >
                Login
              </Text>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 30,
                  "marginTop": 50,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#e0e0eb",
                    "borderRadius": 25,
                    "flexDirection": "row",
                    "marginVertical": 10,
                    "padding": 10,
                    "width": "100%",
                  }
                }
              >
                <Text />
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Username"
                  rejectResponderTermination={true}
                  style={
                    Object {
                      "flex": 1,
                      "fontFamily": "Roboto",
                      "fontSize": 20,
                      "marginLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
              <View
                style={
                  Object {
                    "backgroundColor": "#e0e0eb",
                    "borderRadius": 25,
                    "flexDirection": "row",
                    "marginVertical": 10,
                    "padding": 10,
                    "width": "100%",
                  }
                }
              >
                <Text />
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Password"
                  rejectResponderTermination={true}
                  secureTextEntry={true}
                  style={
                    Object {
                      "flex": 1,
                      "fontFamily": "Roboto",
                      "fontSize": 20,
                      "marginLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
            </View>
            <View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#BBB6A5",
                      "borderRadius": 15,
                      "flexDirection": "row",
                      "justifyContent": "center",
                      "marginTop": 5,
                      "padding": 15,
                      "width": "100%",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#fff",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "textTransform": "uppercase",
                      }
                    }
                  >
                    Login
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`#SN.02 Register screen renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "flex": 1,
        "marginTop": 20,
      },
      Object {
        "flex": 1,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Image
        blurRadius={0.9}
        source={1}
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <RCTScrollView>
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f5f5f5",
                "borderColor": "#B5A197",
                "borderWidth": 10,
                "elevation": 20,
                "height": 700,
                "justifyContent": "center",
                "margin": 20,
                "padding": 10,
                "shadowColor": "#000",
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "fontFamily": "Roboto",
                    "fontSize": 25,
                  }
                }
              >
                Register
              </Text>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 30,
                  "marginTop": 50,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#e0e0eb",
                    "borderRadius": 25,
                    "flexDirection": "row",
                    "marginVertical": 10,
                    "padding": 10,
                    "width": "100%",
                  }
                }
              >
                <Text />
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="email-address"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Email Address"
                  rejectResponderTermination={true}
                  style={
                    Object {
                      "flex": 1,
                      "fontFamily": "Roboto",
                      "fontSize": 20,
                      "marginLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
              <View
                style={
                  Object {
                    "backgroundColor": "#e0e0eb",
                    "borderRadius": 25,
                    "flexDirection": "row",
                    "marginVertical": 10,
                    "padding": 10,
                    "width": "100%",
                  }
                }
              >
                <Text />
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Username"
                  rejectResponderTermination={true}
                  style={
                    Object {
                      "flex": 1,
                      "fontFamily": "Roboto",
                      "fontSize": 20,
                      "marginLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
              <View
                style={
                  Object {
                    "backgroundColor": "#e0e0eb",
                    "borderRadius": 25,
                    "flexDirection": "row",
                    "marginVertical": 10,
                    "padding": 10,
                    "width": "100%",
                  }
                }
              >
                <Text />
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="words"
                  autoCorrect={false}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Full Name"
                  rejectResponderTermination={true}
                  style={
                    Object {
                      "flex": 1,
                      "fontFamily": "Roboto",
                      "fontSize": 20,
                      "marginLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
              <View
                style={
                  Object {
                    "backgroundColor": "#e0e0eb",
                    "borderRadius": 25,
                    "flexDirection": "row",
                    "marginVertical": 10,
                    "padding": 10,
                    "width": "100%",
                  }
                }
              >
                <Text />
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Password"
                  rejectResponderTermination={true}
                  secureTextEntry={true}
                  style={
                    Object {
                      "flex": 1,
                      "fontFamily": "Roboto",
                      "fontSize": 20,
                      "marginLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#BBB6A5",
                      "borderRadius": 15,
                      "flexDirection": "row",
                      "justifyContent": "center",
                      "marginTop": 5,
                      "padding": 15,
                      "width": "100%",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#fff",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "textTransform": "uppercase",
                      }
                    }
                  >
                    Register
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`#SN.03 Welcome screen renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "flex": 1,
        "marginTop": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Image
        blurRadius={0.9}
        source={1}
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#f5f5f5",
            "borderColor": "#B5A197",
            "borderWidth": 10,
            "elevation": 20,
            "flex": 0.7,
            "justifyContent": "center",
            "margin": 20,
            "marginTop": "40%",
            "shadowColor": "#000",
          }
        }
      >
        <Text />
        <View
          style={
            Object {
              "fontFamily": "Roboto",
            }
          }
        >
          <View>
            <Text
              style={
                Object {
                  "fontFamily": "Roboto",
                  "fontSize": 25,
                }
              }
            >
              Welcome to memorybook!
            </Text>
          </View>
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Roboto",
                  "fontSize": 20,
                },
                Object {
                  "alignItems": "center",
                  "fontStyle": "italic",
                  "justifyContent": "center",
                },
              ]
            }
          >
            "One Solution to storing photos"
          </Text>
        </View>
        <View
          style={
            Object {
              "margin": 10,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#BBB6A5",
                  "borderRadius": 15,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginTop": 5,
                  "padding": 15,
                  "width": "100%",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#fff",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "textTransform": "uppercase",
                  }
                }
              >
                Login
              </Text>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#BBB6A5",
                    "borderRadius": 15,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "marginTop": 5,
                    "padding": 15,
                    "width": "100%",
                  },
                  Object {
                    "backgroundColor": "#8C8C9C",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#fff",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "textTransform": "uppercase",
                  }
                }
              >
                Register
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Login screen renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "flex": 1,
        "marginTop": 20,
      },
      Object {
        "flex": 1,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Image
        blurRadius={0.9}
        source={1}
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <RCTScrollView>
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f5f5f5",
                "borderColor": "#B5A197",
                "borderWidth": 10,
                "elevation": 20,
                "height": 550,
                "justifyContent": "center",
                "margin": 20,
                "marginTop": "25%",
                "padding": 10,
                "shadowColor": "#000",
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "fontFamily": "Roboto",
                    "fontSize": 25,
                  }
                }
              >
                Login
              </Text>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 30,
                  "marginTop": 50,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#e0e0eb",
                    "borderRadius": 25,
                    "flexDirection": "row",
                    "marginVertical": 10,
                    "padding": 10,
                    "width": "100%",
                  }
                }
              >
                <Text />
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Username"
                  rejectResponderTermination={true}
                  style={
                    Object {
                      "flex": 1,
                      "fontFamily": "Roboto",
                      "fontSize": 20,
                      "marginLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
              <View
                style={
                  Object {
                    "backgroundColor": "#e0e0eb",
                    "borderRadius": 25,
                    "flexDirection": "row",
                    "marginVertical": 10,
                    "padding": 10,
                    "width": "100%",
                  }
                }
              >
                <Text />
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Password"
                  rejectResponderTermination={true}
                  secureTextEntry={true}
                  style={
                    Object {
                      "flex": 1,
                      "fontFamily": "Roboto",
                      "fontSize": 20,
                      "marginLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
            </View>
            <View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#BBB6A5",
                      "borderRadius": 15,
                      "flexDirection": "row",
                      "justifyContent": "center",
                      "marginTop": 5,
                      "padding": 15,
                      "width": "100%",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#fff",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "textTransform": "uppercase",
                      }
                    }
                  >
                    Login
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Register screen renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "flex": 1,
        "marginTop": 20,
      },
      Object {
        "flex": 1,
        "marginTop": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Image
        blurRadius={0.9}
        source={1}
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <RCTScrollView>
        <View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#f5f5f5",
                "borderColor": "#B5A197",
                "borderWidth": 10,
                "elevation": 20,
                "height": 700,
                "justifyContent": "center",
                "margin": 20,
                "padding": 10,
                "shadowColor": "#000",
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "fontFamily": "Roboto",
                    "fontSize": 25,
                  }
                }
              >
                Register
              </Text>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 30,
                  "marginTop": 50,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#e0e0eb",
                    "borderRadius": 25,
                    "flexDirection": "row",
                    "marginVertical": 10,
                    "padding": 10,
                    "width": "100%",
                  }
                }
              >
                <Text />
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="email-address"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Email Address"
                  rejectResponderTermination={true}
                  style={
                    Object {
                      "flex": 1,
                      "fontFamily": "Roboto",
                      "fontSize": 20,
                      "marginLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
              <View
                style={
                  Object {
                    "backgroundColor": "#e0e0eb",
                    "borderRadius": 25,
                    "flexDirection": "row",
                    "marginVertical": 10,
                    "padding": 10,
                    "width": "100%",
                  }
                }
              >
                <Text />
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Username"
                  rejectResponderTermination={true}
                  style={
                    Object {
                      "flex": 1,
                      "fontFamily": "Roboto",
                      "fontSize": 20,
                      "marginLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
              <View
                style={
                  Object {
                    "backgroundColor": "#e0e0eb",
                    "borderRadius": 25,
                    "flexDirection": "row",
                    "marginVertical": 10,
                    "padding": 10,
                    "width": "100%",
                  }
                }
              >
                <Text />
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="words"
                  autoCorrect={false}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Full Name"
                  rejectResponderTermination={true}
                  style={
                    Object {
                      "flex": 1,
                      "fontFamily": "Roboto",
                      "fontSize": 20,
                      "marginLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
              <View
                style={
                  Object {
                    "backgroundColor": "#e0e0eb",
                    "borderRadius": 25,
                    "flexDirection": "row",
                    "marginVertical": 10,
                    "padding": 10,
                    "width": "100%",
                  }
                }
              >
                <Text />
                <TextInput
                  allowFontScaling={true}
                  autoCapitalize="none"
                  autoCorrect={false}
                  keyboardType="default"
                  onBlur={[Function]}
                  onChangeText={[Function]}
                  placeholder="Password"
                  rejectResponderTermination={true}
                  secureTextEntry={true}
                  style={
                    Object {
                      "flex": 1,
                      "fontFamily": "Roboto",
                      "fontSize": 20,
                      "marginLeft": 10,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "marginBottom": 10,
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#BBB6A5",
                      "borderRadius": 15,
                      "flexDirection": "row",
                      "justifyContent": "center",
                      "marginTop": 5,
                      "padding": 15,
                      "width": "100%",
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "color": "#fff",
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "textTransform": "uppercase",
                      }
                    }
                  >
                    Register
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Welcome screen renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "flex": 1,
        "marginTop": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <Image
        blurRadius={0.9}
        source={1}
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#f5f5f5",
            "borderColor": "#B5A197",
            "borderWidth": 10,
            "elevation": 20,
            "flex": 0.7,
            "justifyContent": "center",
            "margin": 20,
            "marginTop": "40%",
            "shadowColor": "#000",
          }
        }
      >
        <Text />
        <View
          style={
            Object {
              "fontFamily": "Roboto",
            }
          }
        >
          <View>
            <Text
              style={
                Object {
                  "fontFamily": "Roboto",
                  "fontSize": 25,
                }
              }
            >
              Welcome to memorybook!
            </Text>
          </View>
          <Text
            style={
              Array [
                Object {
                  "fontFamily": "Roboto",
                  "fontSize": 20,
                },
                Object {
                  "alignItems": "center",
                  "fontStyle": "italic",
                  "justifyContent": "center",
                },
              ]
            }
          >
            "One Solution to storing photos"
          </Text>
        </View>
        <View
          style={
            Object {
              "margin": 10,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#BBB6A5",
                  "borderRadius": 15,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginTop": 5,
                  "padding": 15,
                  "width": "100%",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#fff",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "textTransform": "uppercase",
                  }
                }
              >
                Login
              </Text>
            </View>
          </View>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#BBB6A5",
                    "borderRadius": 15,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "marginTop": 5,
                    "padding": 15,
                    "width": "100%",
                  },
                  Object {
                    "backgroundColor": "#8C8C9C",
                  },
                ]
              }
            >
              <Text
                style={
                  Object {
                    "color": "#fff",
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "textTransform": "uppercase",
                  }
                }
              >
                Register
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
